--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
 
+        /* Loading Screen */
+        .loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(248, 248, 248, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #333;
+            font-size: 18px;
+            z-index: 9999;
+            transition: opacity 0.5s ease-out;
+        }
+
+        .loading.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
         /* Home Page */
         .home-page {
             width: 100vw;
@@ -34,10 +58,11 @@
         .home-page::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 60%;
+            height: 60%;
             background: url('./images/v10_41.png') center center/contain no-repeat;
             animation: float 6s ease-in-out infinite;
         }
@@ -224,7 +249,13 @@
     <script>
         // Hide loading when page loads
         window.addEventListener('load', function() {
-            document.getElementById('loading').style.display = 'none';
+            const loading = document.getElementById('loading');
+            loading.classList.add('hidden');
+            
+            // Completely remove the loading element after fade out
+            setTimeout(() => {
+                loading.style.display = 'none';
+            }, 500);
         });
 
         document.getElementById('homePage').addEventListener('click', function() {
