--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 60%;
-            height: 60%;
+            width: 300px;
+            height: 300px;
             background: url('./images/v10_41.png') center center/contain no-repeat;
             animation: float 6s ease-in-out infinite;
         }
@@ -205,6 +205,11 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .home-page::before {
+                width: 250px;
+                height: 250px;
+            }
+            
             .envelope {
                 width: 250px;
                 height: 160px;
@@ -216,6 +221,13 @@
             
             .card-front, .card-back {
                 padding: 40px 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .home-page::before {
+                width: 200px;
+                height: 200px;
             }
         }
     </style>
