--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         .wedding-page {
             display: none;
             min-height: 100vh;
-            background-color: #FFFFFF;
+            background-color: #C0BBB5;
         }
 
         .wedding-card {
