--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 700px;
-            height: 700px;
+            width: 450px;
+            height: 450px;
             background: url('./images/v10_41.png') center center/contain no-repeat;
             animation: float 6s ease-in-out infinite;
         }
@@ -134,9 +134,10 @@
             left: 50%;
             transform: translateX(-50%);
             color: #8B8000;
-            font-size: 18px; /* Slightly larger text */
+            font-size: 18px;
             animation: bounce 2s infinite;
             opacity: 0.8;
+            white-space: nowrap;
         }
 
         /* Main Wedding Page */
@@ -215,8 +216,8 @@
         /* Responsive */
         @media (max-width: 768px) {
             .home-page::before {
-                width: 550px;
-                height: 550px;
+                width: 350px;
+                height: 350px;
             }
             
             .wedding-card {
@@ -230,8 +231,8 @@
 
         @media (max-width: 480px) {
             .home-page::before {
-                width: 450px;
-                height: 450px;
+                width: 300px;
+                height: 300px;
             }
         }
     </style>
